# cloudformation-lambda-rs

./: Cargo.toml
src/: lib.rs  map.rs  model.rs  response.rs
