[package]
name = "cloudformation-lambda"
version = "0.0.1"
authors = ["arcnmx"]

[dependencies]
crowbar = { git = "https://github.com/arcnmx/rust-crowbar" }
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
hyper = "0.10"
hyper-native-tls = "0.2"
url = "1.5"
url_serde = "0.2"
unreachable = "1.0"
log = "0.3"
env_logger = { version = "0.4", optional = true, default-features = false }

[dev-dependencies]
cpython = { version = "0.1", default-features = false, features = ["python3-sys"] }

[features]
default = ["env_logger"]
